--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Walok</title>
 </head>
 <body>
-    
+    <nav>
+        <li>Home</li>
+        <li>About</li>
+    </nav>
+    <h2>Welcome to Walok, where you find confort at your finger tip.</h2>
 </body>
 </html>
