--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Styling of bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Walok</title>
 </head>
-<body>
-    <nav>
-        <li>Home</li>
-        <li>About</li>
-    </nav>
-    <h2>Welcome to Walok, where you find confort at your finger tip.</h2>
+<body style="background-color: #12558A;">
+    <nav class="navbar navbar-expand bg-light navbar-light sticky-top ">
+        <div style="margin-left: 1%; margin-right: 1%; font-size: 20px;" class="container-fluid">
+          <a class="navbar-brand" href="javascript:void(0)">Walokhelpline</a>
+          <div style="font-size: 20px; ">
+            <ul class="navbar-nav ">
+              <li class="nav-item">
+                <a class="nav-link" style="color: #12558A;" href="#">+ Learn</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #12558A;" href="#">+ Get Help</a>
+              </li>                                     
+              <li class="nav-item">
+                <a class="nav-link" style="color: #12558A;" href="#">+ Share</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #12558A;" href="#">+ Explore Topics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #12558A;" href="#">+ Volunteer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: #12558A;" href="#">+ Donate</a>
+              </li>
+              <li class="nav-item">
+                <button style="background-color:#12558A; font-size: 20px;" class="btn btn-primary" type="button">Reach a counselor</button>
+              </li>
+            </ul>
+            
+          </div>
+        </div>
+      </nav>
+
+<!--     Option 1: Bootstrap Bundle with Popper -->
+<!-- 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+
+<!-- combine best option here -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
