--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,7 @@
    
 </head>
 <body>
-    <div class="topnav" id="myTopnav" style="color: #12558A;">
+    <div class="topnav" id="myTopnav" style="background-color: #12558A;color: #D9D9D9;">
         <a href=""></a>
         <a href="#">+ Donate</a>
         <a href="#">+ Volunteer</a>
