--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,7 @@
    
 </head>
 <body>
-    <div class="topnav" id="myTopnav" style="background-color: #12558A;color: #D9D9D9;">
+    <div class="topnav" id="myTopnav" style="background-color: transparent;color: #D9D9D9;">
         <a href=""></a>
         <a href="#">+ Donate</a>
         <a href="#">+ Volunteer</a>
@@ -231,7 +231,35 @@
   </div>  
 
 
-  <script>
+
+<div class="incrisiwd">
+  <h2>In a crisis? 
+  </h2>
+  <h1> Need someone to listen to you, <br> Text <span class="h1crisis"><em>Walok</em></span> to <span class="h1crisis"><em>0800212121</em></span> to <br>connect 
+  with a Volunteer Crisis Counselor.
+  </h1>
+  <h2>We are here for You.</h2>
+  <p class="free24"> Free 24/7 support at your very fingertips.</p>
+  <button type="button" class="btn btn-success" style="width: 5cm;">Text Us</button>
+  <button type="button" class="btn btn-success" style="width: 5cm;">Chat With Us</button>
+  <button type="button" class="btn btn-success" style="width: 6cm;">Message on WhatsApp</button>
+</div>
+
+
+
+<!-- 
+<div class="flex-container">
+  <div class="flex-item-left">
+     <h1 style="padding-bottom: 3%;">You deserve a welcoming, loving community.</h1>
+<h5>And so do the people you care about. Here you can reach out to a counselor if you're struggling, find answers and information,
+   and get the tools you need to help someone else.</h5>
+<p style="margin-top: 5%;">Get the health answers you need from people who live it every day</p>
+
+  </div>
+  <div class="flex-item-right">2</div>
+</div> -->
+
+<script>
     function myFunction() {
       var x = document.getElementById("myTopnav");
       if (x.className === "topnav") {
