--- a/intro.html
+++ b/intro.html
@@ -17,7 +17,7 @@
         <a href="#">+ Donate</a>
         <a href="#">+ Volunteer</a>
         <a href="#">+ Explore Topics</a>
-        <a href="#">+ Share</a>
+        <a href="index.html">+ Share</a>
         <a href="#news">+ Get Help</a>
         <a href="#">+ Learn</a>
         <a href="#">Home</a>
@@ -235,14 +235,20 @@
 <div class="incrisiwd">
   <h2>In a crisis? 
   </h2>
-  <h1> Need someone to listen to you, <br> Text <span class="h1crisis"><em>Walok</em></span> to <span class="h1crisis"><em>0800212121</em></span> to <br>connect 
-  with a Volunteer Crisis Counselor.
+  <h1> Need someone to talk to? <br> Text <span class="h1crisis">Walok</span> to <span class="h1crisis">0800212121 </span> to <br>connect 
+  with a Volunteer Crisis Counselor </br>
   </h1>
-  <h2>We are here for You.</h2>
-  <p class="free24"> Free 24/7 support at your very fingertips.</p>
-  <button type="button" class="btn btn-success" style="width: 5cm;">Text Us</button>
-  <button type="button" class="btn btn-success" style="width: 5cm;">Chat With Us</button>
-  <button type="button" class="btn btn-success" style="width: 6cm;">Message on WhatsApp</button>
+  <h2>We are here for You, Free 24/7 support at your very fingertips.</h2>
+  <!-- <p class="free24"> Free 24/7 support at your very fingertips.</p> -->
+
+<div class="buttons" style="width: 100%;">
+  <a href="#"><button class="button" id="btn1" style="vertical-align:middle"><span>Text Us </span></button></a>
+  <button class="button" style="vertical-align:middle" id="btn2"><span>Call Us </span></button>
+</div>
+
+
+  <!-- <button type="button" class="btn btn-success" style="width: 5cm;">Chat With Us</button> -->
+  <!-- <button type="button" class="btn btn-success" style="width: 6cm;">Message on WhatsApp</button> -->
 </div>
 
 
