elimination of transistions

--- a/intro.html
+++ b/intro.html
@@ -242,7 +242,7 @@
   <!-- <p class="free24"> Free 24/7 support at your very fingertips.</p> -->
 
 <div class="buttons" style="width: 100%;">
-  <a href="#"><button class="button" id="btn1" style="vertical-align:middle"><span>Text Us </span></button></a>
+  <a href="index.html"><button class="button" id="btn1" style="vertical-align:middle"><span>Text Us </span></button></a>
   <button class="button" style="vertical-align:middle" id="btn2"><span>Call Us </span></button>
 </div>
 
