--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Intro</title>
+    <title>Walok Text Line | Text Walok to</title>
     <!-- javascript for the mobileview -->
    
 </head>
@@ -21,7 +21,7 @@
         <a href="#news">+ Get Help</a>
         <a href="#">+ Learn</a>
         <a href="#">Home</a>
-        <a style="float: left;" href="intro.html"><h3>Walokhelpline</h3></a>
+        <a style="float: left;" href="walokhelpline.html"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
