--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a href="#">+ Share</a>
         <a href="#">+ Get Help</a>
         <a href="#">+ Learn</a>
-        <a href="intro.html">Home</a>
-        <a style="float: left;" href="intro.html"><h3>Walokhelpline</h3></a>
+        <a href="Walokhelpline.html">Home</a>
+        <a style="float: left;" href="Walokhelpline.html"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
