--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -17,11 +17,14 @@
       <div class="topnav" id="myTopnav">
         <a href=""></a>
         <a href="#">+ Donate</a>
+        <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
         <a href="#">+ Volunteer</a>
         <a href="#">+ Explore Topics</a>
         <a href="#">+ Share</a>
         <a href="#">+ Get Help</a>
         <a href="#">+ Learn</a>
+        <!-- https://walokhelpline.blogspot.com/ -->
+        
         <a href="#">Home</a>
         <a style="float: left;  border-radius: 3%;" href="index.html"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
@@ -118,7 +121,7 @@ function myFunction() {
               <a href="#!" class="text-reset">Stories</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Blog</a>
+              <a target="_blank" href="https://walokhelpline.blogspot.com/" class="text-reset">Blog</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Privacy Policy</a>
