Glowing Nav hovers

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav" style="background-color: transparent;color: #D9D9D9;">
-        <a href=""></a>
-        <a href="#">+ Donate</a>
+        <!-- <a href=""></a> -->
+        <a style="visibility: collapse;" href="#"></a>
+        <a href="#">DONATE </a>
         <a href="#">+ Volunteer</a>
         <a href="#">+ Explore Topics</a>
         <a href="index.html">+ Share</a>
