--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -15,8 +15,8 @@
 </head>
 <body style="background-color: #12558A; width: 100%;">
       <div class="topnav" id="myTopnav">
-        <a href=""></a>
-        <a href="#">+ Donate</a>
+        <a style="visibility: collapse;" href="#"></a>
+        <a href="#">DONATE</a>
         <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
         <a href="#">+ Volunteer</a>
         <a href="#">+ Explore Topics</a>
