Additional flex attributes

--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -18,11 +18,12 @@
         <a style="visibility: collapse;" href="#"></a>
         <a href="#">DONATE</a>
         <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
-        <a href="#">+ Volunteer</a>
-        <a href="#">+ Explore Topics</a>
-        <a href="#">+ Share</a>
-        <a href="#">+ Get Help</a>
-        <a href="#">+ Learn</a>
+        <li><a href="#">+ Volunteer</a></li>
+       <li><a href="#">+ Explore Topics</a></li>
+        <!-- <li><a href="#">+ Share</a></li> -->
+        
+        <li><a href="#">+ Learn</a></li>
+        <li><a href="#">+ Get Help</a></li>
         <!-- https://walokhelpline.blogspot.com/ -->
         
         <a href="#">Home</a>
@@ -54,7 +55,32 @@
 
   </div>
   <div class="flex-item-right">
-    <p style="margin-top: 5%;">Get the health answers you need from people who live it every day</p>
+    <div class="flex-container2">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>5</div>
+    </div>
+    <div class="flex-container2">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>5</div>
+    </div>
+    <div class="flex-container2">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>5</div>
+    </div>
+    <div class="flex-container2">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>5</div>
+    </div>
+<!-- 
+    <p style="margin-top: 5%;">Get the health answers you need from people who live it every day</p> -->
   </div>
 </div>
 
@@ -116,6 +142,9 @@ function myFunction() {
             </p>
             <p>
               <a href="#!" class="text-reset">Career & Volunteer</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Closest Help</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Stories</a>
