--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <!-- <a href=""></a> -->
         <a style="visibility: collapse;" href="#"></a>
         <a href="#">DONATE </a>
+        <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
         <a href="#">+ Volunteer</a>
         <a href="#">+ Explore Topics</a>
-        <a href="index.html">+ Share</a>
-        <a href="#news">+ Get Help</a>
+        <!-- <a href="index.html">+ Share</a> -->
         <a href="#">+ Learn</a>
+        <a href="#news">+ Get Help</a>
         <a href="Walokhelpline.html">Home</a>
         <a style="float: left; border-radius: 3%;" href="#"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
