--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -18,12 +18,12 @@
         <a style="visibility: collapse;" href="#"></a>
         <a href="#">DONATE</a>
         <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
-        <li><a href="#">+ Volunteer</a></li>
-       <li><a href="#">+ Explore Topics</a></li>
+        <a href="#">+ Volunteer</a>
+       <a href="#">+ Explore Topics</a>
         <!-- <li><a href="#">+ Share</a></li> -->
         
-        <li><a href="#">+ Learn</a></li>
-        <li><a href="#">+ Get Help</a></li>
+        <a href="#">+ Learn</a>
+        <a href="#">+ Get Help</a>
         <!-- https://walokhelpline.blogspot.com/ -->
         
         <a href="#">Home</a>
