--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <!-- Styling of bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="/img/favi.ico" type="image/x-icon">
     <title>Walok</title>
     <link rel="stylesheet" href="style.css">
     
@@ -41,7 +43,8 @@
 <div class="flex-container">
   <div  class="flex-item-left" style="background-color:#12558A" > 
     
-    <img style="width: 100%;" src="img/double.svg"/>
+    <img style="width: 100%;" src="img/index.svg"/>
+    <!-- double.svg -->
   </div>
 
 </div>
