Adding Javascript in the functionality

--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -59,29 +59,29 @@
   </div>
   <div class="flex-item-right">
     <div class="flex-container2">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>5</div>
+      <div><h3>Anxiety</h3></div>
+      <div><h3>depression</h3></div>
+      <div><h3>Suicide</h3></div>
+      <div><h3>Coronavirus</h3></div>
     </div>
     <div class="flex-container2">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>5</div>
+      <div><p>Self Harm</p></div>
+      <div><p>Addiction</p></div>
+      <div><p>Gambling</p></div>
+      <div><p>Biplar </p></div>
     </div>
     <div class="flex-container2">
+      <div><p>Trauma</p></div>
+      <div><p>ADHD</p></div>
+      <div><p>Insomnia</p></div>
+      <div><p>PTSD</p></div>
+    </div>
+    <!-- <div class="flex-container2">
       <div>1</div>
       <div>2</div>
       <div>3</div>
       <div>5</div>
-    </div>
-    <div class="flex-container2">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>5</div>
-    </div>
+    </div> -->
 <!-- 
     <p style="margin-top: 5%;">Get the health answers you need from people who live it every day</p> -->
   </div>
