--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ let popup =  document.getElementById("popup");
   }
 
   function openhone(){
-    location.href="phone:256788931578";
+    location.href="tel:+256788931578";
   }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
