--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -28,7 +28,7 @@
         <a href="#">+ Get Help</a>
         <!-- https://walokhelpline.blogspot.com/ -->
         
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a style="float: left;  border-radius: 3%;" href="index.html"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
