--- a/index.html
+++ b/index.html
@@ -312,6 +312,9 @@ let body = document.getElementById("bdy");
 //  location.href="https://mail.google.com/chat/u/0/#chat/dm/jTH94kAAAAE"; //-Failed google chat idea
     // location.href="https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e";
     window.open('https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e','_blank');
+    popup.classList.remove("open-popup");
+    body.style.opacity="1";
+    body.style.pointerEvents="auto";
     // https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e
   }
   
