--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
     <!-- The POpup dialogue box -->
     <div class="popup" id="popup">
       <img src="img/tick.png">
-      <h2>In crisis and need to talk to someone?</h2>
+      <h2>Are you in a crisis and need someone to talk to?</h2>
       <p>We’re here for you.
-      Text WALOK to 0800212121 to reach a volunteer Crisis Counselor.</p>
+      Text <strong>WALOK</strong> to 0800212121 or on the web to reach a volunteer Crisis Counselor now.</p>
       <p style="font-size:9px;">Message frequency varies. Message & data rates may apply. <span style="color:red;"><a href="#">Terms of Service & Privacy Policy.</a></span></p>
       <button type="submit" class="btn" onclick="webChat()">Web Chat</button>
       <button type="submit" class="btn" onclick="opensms()"> SMS Chat</button>
