--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <div class="incrisiwd">
   <h2>In a crisis? 
   </h2>
-  <h1> Need someone to talk to? <br> Text <span class="h1crisis">Walok</span> to <span class="h1crisis">0800212121 </span> to <br>connect 
+  <h1> Need someone to talk to? <br> Text <span class="h1crisis"> <a href="https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e" target="_blank" rel="noopener noreferrer">Walok</a> </span> to <span class="h1crisis">0800212121 </span> to <br>connect 
   with a Volunteer Crisis Counselor </br>
   </h1>
   <h2>We are here for You, Free 24/7 support at your very fingertips.</h2>
@@ -269,7 +269,8 @@
 
 <!--Start of Tawk.to Script-->
 <!--Start of Tawk.to Script-->
-<!-- <script type="text/javascript">
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
   (function(){
   var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -279,7 +280,8 @@
   s1.setAttribute('crossorigin','*');
   s0.parentNode.insertBefore(s1,s0);
   })();
-  </script> -->
+  </script>
+  <!--End of Tawk.to Script-->
   <!--End of Tawk.to Script-->
   <!--End of Tawk.to Script-->
 
