--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -29,7 +29,7 @@
         <!-- https://walokhelpline.blogspot.com/ -->
         
         <a style="color: #ddd; cursor: pointer;" onclick="home()">Home</a>
-        <a style="float: left;  border-radius: 3%; cursor: pointer; color: #ddd;" onclick="home()"><h3>Walokhelpline</h3></a>
+        <a style="float: left;  border-radius: 3%; cursor: pointer; color: #ddd;" onclick="webChat()"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -106,7 +106,11 @@
   </script> -->
   <!--End of Tawk.to Script-->
 <script>
-  
+function webChat(){
+  // location.href="https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e";
+  window.open('https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e','_blank');
+}
+
 function myFunction() {
   var x = document.getElementById("myTopnav");
   if (x.className === "topnav") {
