--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -24,8 +24,8 @@
        <a href="#">+ Explore Topics</a>
         <!-- <li><a href="#">+ Share</a></li> -->
         
-        <a href="#">+ Learn</a>
-        <a href="#">+ Get Help</a>
+        <a href="learn.html">+ Learn</a>
+        <a href="gethelp.html">+ Get Help</a>
         <!-- https://walokhelpline.blogspot.com/ -->
         
         <a style="color: #ddd; cursor: pointer;" onclick="home()">Home</a>
