--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
    
 </head>
 <body id="bdy">
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/63d1499ec2f1ac1e202f8ed3/1gnkof51e';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
     <div class="topnav" id="myTopnav" style="background-color: transparent;color: #D9D9D9;">
         <!-- <a href=""></a> -->
         <a style="visibility: collapse;" href="#"></a>
@@ -21,8 +32,8 @@
         <a href="#">+ Volunteer</a>
         <a href="#">+ Explore Topics</a>
         <!-- <a href="index.html">+ Share</a> -->
-        <a href="#">+ Learn</a>
-        <a href="#news">+ Get Help</a>
+        <a href="learn.html">+ Learn</a>
+        <a href="gethelp.html">+ Get Help</a>
         <a style="color: #ddd; cursor: pointer;" onclick="homepage()">Home</a>
         <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
@@ -268,21 +279,9 @@
 
 
 <!--Start of Tawk.to Script-->
-<!--Start of Tawk.to Script-->
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/63d1499ec2f1ac1e202f8ed3/1gnkof51e';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
-  <!--End of Tawk.to Script-->
+
+
+
   <!--End of Tawk.to Script-->
 
 <script>
