--- a/gethelp.html
+++ b/gethelp.html
@@ -13,13 +13,13 @@
 </head>
 <body style="background-color:#4fc3dc;">
 <!-- Nav Bar -->
-<div class="topnav" id="myTopnav" style="height:9%;color: #D9D9D9;background-image: url(img/navBarbg.svg);">
+<div class="topnav" id="myTopnav" style="height:9%;color: #D9D9D9;background-image: url(img/navBarbg.svg); position: relative;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
     <a onclick="donatePage()">DONATE </a>
     <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
     <a onclick="volunteer()">+ Volunteer</a>
-    <a onclick="explore()">+ Explore Topics</a>
+    <a onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
     <a onclick="learn()">+ Learn</a>
     <a href="#">+ Get Help</a>
@@ -32,7 +32,40 @@
   </div>
 <!-- Nav Bar ending -->
 
-<!-- Sections -->
+<div class="gcontainer" style="display: grid; height: auto; width: 100%;">
+  <div class="gtop" style="display: flexbox; width: 100%; grid-template-rows: 0fr;align-content: center; text-align: center; grid-template-columns: 1fr; background-color: transparent;">
+    <h1 style="padding-top: 1%;">Reach a Counselor <span style="font-weight: 100;">Today!</span></h1> 
+    <hr style="width: 85%; float: right; text-align: center;">
+    <h2 style="padding-right:15%; padding-left: 15%; justify-content: center; text-align: justify; width: 100%;font-weight: 200;">
+  <span style="font-weight: 700;"> Walok-helpline</span> serves anyone, in any type of crisis, providing access to free, 24/7 support via mediums people already use and trust. Both Web & SMS Chats, toll free calls, articles and blogs.</h2>
+  
+ <hr style="width: 85%; text-align: center;">
+<div class="gcontent">
+      <div class="flex-container2">
+        <div onclick="openAnxiety()"><p>Anxiety</p></div>
+        <div onclick="openDepression()"><p>depression</p></div>
+        <div onclick="openSuicide()"><p>Suicide</p></div>
+        <div onclick="openLonliness()"><p>Lonliness</p></div>
+      </div>
+      <div class="flex-container2">
+        <div onclick="openSelfharm()"><p>Self Harm</p></div>
+        <div onclick="openAddiction()"><p>Addiction</p></div>
+        <div onclick="openGambling()"><p>Gambling</p></div>
+        <div onclick="openBiplar()"><p>Biplar </p></div>
+      </div>
+      <div class="flex-container2">
+        <div onclick="openTrama()"><p>Trauma</p></div>
+        <div onclick="openAdhd()"><p>ADHD</p></div>
+        <div onclick="openIsomnia()"><p>Insomnia</p></div>
+        <div onclick="openPtsd"><p>PTSD</p></div>
+      </div>
+      <div class="flex-container2">
+        <div onclick="openEatingdisorder()"><p>Eating Disorder</p></div>
+        <div onclick="openEmotionalabuse()"><p>Emotional Abuse</p></div>
+        <div onclick="openCovid()"><p>Corona Virus Effect</p></div>
+      </div>
+  </div>
+</div>
 
 <!-- Sectins ends -->
 <script>
