--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#">DONATE </a>
         <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
         <a href="#">+ Volunteer</a>
-        <a href="#">+ Explore Topics</a>
+        <a href="#">+ Explore </a>
         <!-- <a href="index.html">+ Share</a> -->
         <a href="learn.html">+ Learn</a>
         <a href="gethelp.html">+ Get Help</a>
