--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -21,7 +21,7 @@
         <a href="#">DONATE</a>
         <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
         <a href="#">+ Volunteer</a>
-       <a href="#">+ Explore Topics</a>
+       <a href="#">+ Explore </a>
         <!-- <li><a href="#">+ Share</a></li> -->
         
         <a href="learn.html">+ Learn</a>
