--- a/explore.html
+++ b/explore.html
@@ -19,7 +19,7 @@
     <a onclick="donatePage()">DONATE </a>
     <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
     <a onclick="volunteer()">+ Volunteer</a>
-    <a onclick="explore()">+ Explore Topics</a>
+    <a onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
     <a onclick="learn()">+ Learn</a>
     <a onclick="gethelp()">+ Get Help</a>
