--- a/gethelp.html
+++ b/gethelp.html
@@ -67,6 +67,13 @@
   </div>
 </div>
 
+<!--	Exported from Voyant Tools (voyant-tools.org).
+The iframe src attribute below uses a relative protocol to better function with both
+http and https sites, but if you're embedding this into a local web page (file protocol)
+you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
+it depends on this server.
+Feel free to change the height and width values or other styling below: -->
+<center><iframe style='width: 80%; align-content: center; height: 747px;' src='https://voyant-tools.org/tool/Cirrus/?visible=365&corpus=31333a1aedbb9f611756437ab5ae4e47'></iframe></center>
 <!-- Sectins ends -->
 <script>
         function myFunction() {
