--- a/gethelp.html
+++ b/gethelp.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="features.css"> -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:#4fc3dc;">
+<body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
 <div class="topnav" id="myTopnav" style="height:9%;color: #D9D9D9;background-image: url(img/navBarbg.svg); position: relative;">
     <!-- <a href=""></a> -->
@@ -73,7 +73,23 @@ http and https sites, but if you're embedding this into a local web page (file p
 you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
 it depends on this server.
 Feel free to change the height and width values or other styling below: -->
-<center><iframe style='width: 80%; align-content: center; height: 747px;' src='https://voyant-tools.org/tool/Cirrus/?visible=365&corpus=31333a1aedbb9f611756437ab5ae4e47'></iframe></center>
+<!-- <center><iframe style='width: 80%; align-content: center; height: 747px;' src='https://voyant-tools.org/tool/Cirrus/?visible=365&corpus=31333a1aedbb9f611756437ab5ae4e47'></iframe></center> -->
+
+<!-- Edited Dataset -->
+<!--	Exported from Voyant Tools (voyant-tools.org).
+The iframe src attribute below uses a relative protocol to better function with both
+http and https sites, but if you're embedding this into a local web page (file protocol)
+you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
+it depends on this server.
+Feel free to change the height and width values or other styling below: -->
+<!--	Exported from Voyant Tools (voyant-tools.org).
+  The iframe src attribute below uses a relative protocol to better function with both
+  http and https sites, but if you're embedding this into a local web page (file protocol)
+  you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
+  it depends on this server.
+  Feel free to change the height and width values or other styling below: -->
+  <!-- <iframe style='width: 80%; height: 800px;' src='https://voyant-tools.org/tool/Cirrus/?visible=345&corpus=1785315c3906f33e35ce27d1247d345f'></iframe></center> -->
+
 <!-- Sectins ends -->
 <script>
         function myFunction() {
