--- a/donate.html
+++ b/donate.html
@@ -11,19 +11,19 @@
     <!-- <link rel="stylesheet" href="features.css"> -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:#12558A;">
+<body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
-<div class="topnav" id="myTopnav" style="background-color: transparent;color: #D9D9D9;">
+<div class="topnav" id="myTopnav" style="background-color: transparent;color: #4D9DD6;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
     <a onclick="donatePage()">DONATE </a>
-    <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
+    <a target="_blank" style="color: #4D9DD6;" href="https://walokhelpline.blogspot.com/"> Blog</a>
     <a onclick="volunteer()">+ Volunteer</a>
     <a onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
     <a onclick="learn()">+ Learn</a>
     <a onclick="gethelp()">+ Get Help</a>
-    <a style="color: #ddd; cursor: pointer;" onclick="homepage()">Home</a>
+    <a style="color: #4D9DD6; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
     <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
