--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
 </head>
 <body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
-<div class="topnav" id="myTopnav" style="background-color: transparent;color: #4D9DD6;">
+<div class="topnav" id="myTopnav" style="background-color: aliceblue;color: #4D9DD6;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
     <a onclick="donatePage()">DONATE </a>
