--- a/gethelp.html
+++ b/gethelp.html
@@ -13,18 +13,18 @@
 </head>
 <body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
-<div class="topnav" id="myTopnav" style="height:9%;color: #D9D9D9;background-image: url(img/navBarbg.svg); position: relative;">
+<div class="topnav" id="myTopnav" style="background-color: aliceblue;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
-    <a onclick="donatePage()">DONATE </a>
-    <a target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
-    <a onclick="volunteer()">+ Volunteer</a>
-    <a onclick="explore()">+ Explore </a>
+    <a style="color: #12558A;" onclick="donatePage()">DONATE </a>
+    <a style="color: #12558A;" target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
+    <a style="color: #12558A;" onclick="volunteer()">+ Volunteer</a>
+    <a style="color: #12558A;" onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
-    <a onclick="learn()">+ Learn</a>
-    <a href="#">+ Get Help</a>
-    <a style="color: #ddd; cursor: pointer;" onclick="homepage()">Home</a>
-    <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
+    <a style="color: #12558A;" onclick="learn()">+ Learn</a>
+    <a style="color: #12558A;" href="#">+ Get Help</a>
+    <a style="color:#12558A; cursor: pointer;" onclick="homepage()">Home</a>
+    <a style="float: left; color: #12558A; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
     <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
@@ -32,7 +32,7 @@
   </div>
 <!-- Nav Bar ending -->
 
-<div class="gcontainer" style="display: grid; height: auto; width: 100%;">
+<div class="gcontainer" style="display: grid; padding-top: 08%; position: absolute; height: auto; width: 100%;">
   <div class="gtop" style="display: flexbox; width: 100%; grid-template-rows: 0fr;align-content: center; text-align: center; grid-template-columns: 1fr; background-color: transparent;">
     <h1 style="padding-top: 1%;">Reach a Counselor <span style="font-weight: 100;">Today!</span></h1> 
     <hr style="width: 85%; float: right; text-align: center;">
