--- a/explore.html
+++ b/explore.html
@@ -13,33 +13,34 @@
 </head>
 <body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
-<div class="topnav" id="myTopnav" style="background-color: #FFFFFF;color: #4D9DD6; position: relative;">
-   <!--bg-color:before:#F5F5F5  -->
-  <!-- <a href=""></a> -->
-    <a style="visibility: collapse;" href="#"></a>
-    <a onclick="donatePage()">DONATE </a>
-    <a target="_blank" style="color: #4D9DD6;" href="https://walokhelpline.blogspot.com/"> Blog</a>
-    <a onclick="volunteer()">+ Volunteer</a>
-    <a onclick="explore()">+ Explore </a>
-    <!-- <a href="index.html">+ Share</a> -->
-    <a onclick="learn()">+ Learn</a>
-    <a onclick="gethelp()">+ Get Help</a>
-    <a style="color: #4D9DD6; cursor: pointer;" onclick="homepage()">Home</a>
-    <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
-    <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
+<div class="topnav" style="background-color: aliceblue; z-index: 3;" id="myTopnav">
+  <a style="color: #12558A;" style="visibility: collapse;" href="#"></a>
+  <a style="color: #12558A;" onclick="donatePage()" href="#">DONATE</a>
+  <a style="color: #12558A;" target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
+  <a style="color: #12558A;" onclick="volunteer()" href="#">+ Volunteer</a>
+ <a style="color: #12558A;" href="#">+ Explore </a>
+  <!-- <li><a href="#">+ Share</a></li> -->
+  
+  <a style="color: #12558A;" onclick="learn()">+ Learn</a>
+  <a style="color: #12558A;" onclick="gethelp()">+ Get Help</a>
+  <!-- https://walokhelpline.blogspot.com/ -->
+  
+  <a style="cursor: pointer; color: #12558A;" onclick="homepage()">Home</a>
+  <!-- <a style="float: left;  border-radius: 3%; cursor: pointer; " onclick="webChat()"><img src="img/tick.png" style="width: 10%; height: 10%;"/></a> -->
+  <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
 <!-- Nav Bar ending -->
-<h2 style="font-weight: 200;">Explore the need</h2>
-<center><!--	Exported from Voyant Tools (voyant-tools.org).
+<!-- <h2 style="font-weight: 200; margin-top: 85%;">Explore the need</h2> -->
+<center "><!--	Exported from Voyant Tools (voyant-tools.org).
   The iframe src attribute below uses a relative protocol to better function with both
   http and https sites, but if you're embedding this into a local web page (file protocol)
   you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
   it depends on this server.
   Feel free to change the height and width values or other styling below: -->
-  <iframe style='width: 80%; height: 800px;' src='https://voyant-tools.org/tool/Cirrus/?visible=345&corpus=1785315c3906f33e35ce27d1247d345f'></iframe></center>
+  <iframe style='width: 80%; height: 800px; margin-top: 5%;' src='https://voyant-tools.org/tool/Cirrus/?visible=345&corpus=1785315c3906f33e35ce27d1247d345f'></iframe></center>
 
 
   <!-- TextArc -->
