--- a/learn.html
+++ b/learn.html
@@ -13,17 +13,17 @@
 </head>
 <body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
-<div class="topnav" id="myTopnav" style="background-color: #FFFFFF;color: #4D9DD6;">
+<div class="topnav" id="myTopnav" style="background-color: #FFFFFF;color: #12558a;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
     <a onclick="donatePage()">DONATE </a>
-    <a target="_blank" style="color:#4D9DD6;" href="https://walokhelpline.blogspot.com/"> Blog</a>
+    <a target="_blank" style="color:#12558a;" href="https://walokhelpline.blogspot.com/"> Blog</a>
     <a onclick="volunteer()">+ Volunteer</a>
     <a onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
-    <a href="#" style="color: #4D9DD6;">+ Learn</a>
+    <a href="#" style="color: #12558a;">+ Learn</a>
     <a onclick="gethelp()">+ Get Help</a>
-    <a style="color: #4D9DD6; cursor: pointer;" onclick="homepage()">Home</a>
+    <a style="color: #12558a; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
     <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
